rust/phase1_ingestor/u00261
   Compiling phase1_ingestor v0.1.0 (/Users/teomiscia/web/business-finder/rust/phase1_ingestor)
error[E0425]: cannot find function `load_state` in this scope
  --> src/phase1.rs:26:48
   |
26 |     let state: Arc<ProcessingState> = Arc::new(load_state().unwrap_or_else(|_| {
   |                                                ^^^^^^^^^^ not found in this scope
   |
help: consider importing this function through its public re-export
   |
 1 + use crate::load_state;
   |

warning: unused import: `Context`
 --> src/phase1.rs:7:14
  |
7 | use anyhow::{Context, Result};
  |              ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::constants::RAW_DATA_DIRS`
 --> src/utils.rs:9:5
  |
9 | use crate::constants::RAW_DATA_DIRS;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0425`.
warning: `phase1_ingestor` (lib) generated 2 warnings
error: could not compile `phase1_ingestor` (lib) due to 1 previous error; 2 warnings emitted
